edition = "2023";

package wayplatform.connect.tachograph.card.v1;

import "google/protobuf/descriptor.proto";
import "wayplatform/connect/tachograph/card/v1/file_descriptor.proto";

extend google.protobuf.EnumValueOptions {
  FileDescriptor file_structure = 50302;
}
